# svea_lli_zephyr

./: .gitignore
.devcontainer/: Dockerfile  devcontainer.json
Projects/Svea-Custom-Protocol/: CMakeLists.txt  README.md  prj.conf
Projects/Svea-Custom-Protocol/boards/: clicker4_stm32f7.overlay
Projects/Svea-Custom-Protocol/include/: app_threads.h  channels.h  host_channels.h  host_command_dispatch.h  messages.h  telemetry_channels.h  telemetry_encode.h  topic_registry.h  uart_shared.h
Projects/Svea-Custom-Protocol/src/: channels.c  current_sensor.c  host_command_dispatch.c  imu_sensor.c  main.c  sensor_stubs.c  telemetry_encode.c  uart_publisher.c  uart_shared.c  uart_subscriber.c
Projects/Svea-Custom-Protocol/tools/: telemetry_host.py
boards/arm/clicker4_stm32f7/: Kconfig.defconfig  clicker4_stm32f7.dts  clicker4_stm32f7_defconfig
west-manifest/: west.yml
